# DoViBaker

./: .gitmodules  CMakeLists.txt  DoViBaker.sln  DoViMaxMqFileCreator.avs  DoViSceneFileCreator.avs  README.md  example.avs
DoViBaker/: AvisynthEntry.cpp  AvsCube.cpp  DoViBaker.cpp  DoViBaker.vcxproj  DoViBaker.vcxproj.filters  DoViCubes.cpp  DoViCubes.h  DoViEetf.cpp  DoViEetf.h  DoViLutGen.cpp  DoViMaxPqFileReader.cpp  DoViMaxPqFileReader.h  DoViProcessor.cpp  DoViSceneFileReader.cpp  DoViSceneFileReader.h  DoViStatsFileLoader.cpp  DoViTonemap.cpp  DoViTonemap.h  DoViTonemapper.cpp  DoViTonemapper.h  DoViTransferFunctions.cpp  DoViTransferFunctions.h  avscube.cpp  cube.cpp  lut.cpp  lut_avx2.cpp  lut_avx512.cpp  lut_sse41.cpp  lut_x86.cpp
include/: DoViBaker.h  DoViCubes.h  DoViEetf.h  DoViProcessor.h  DoViStatsFileLoader.h  DoViTonemap.h  cube.h  def.h  lut.h  lut_x86.h  rpu_parser.h
include/timecube/: timecube.h
scripts/: BetterGrayscale.avsi  LumScaleComparison.avs  LumScaleFindHelper.avs  LumScaleHelper.avs  RealGrayscale.avsi  StatsFileCreator.avs  createSampleLuts.cmd  example.avs
